--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
 project(EasyFCGI
-        VERSION 1.2
+        VERSION 1.3
         LANGUAGES CXX)
 
 add_library(EasyFCGI OBJECT src/EasyFCGI.cpp)
@@ -19,8 +19,11 @@ add_library(EasyFCGI::EasyFCGI ALIAS EasyFCGI)
 
 # target_link_libraries(${PROJECT_NAME} PUBLIC glaze::glaze)
 target_link_libraries(${PROJECT_NAME} PUBLIC -lfcgi)
-# target_include_directories(${PROJECT_NAME} INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")
-# target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include")
-target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_26)
-target_compile_options(${PROJECT_NAME} PRIVATE -fPIC)
+set_target_properties(
+        ${PROJECT_NAME} PROPERTIES
+        POSITION_INDEPENDENT_CODE ON
+        CMAKE_CXX_EXTENSIONS OFF
+)
+
